# invasive-planning

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json
samples/: doctor_variant_a.txt  doctor_variant_b.txt  investor_variant_a.txt  investor_variant_b.txt  marketing_variant_a.txt  marketing_variant_b.txt  teacher_variant_a.txt  teacher_variant_b.txt
src/communication_lab/: __init__.py  analysis.py  api.py  cli.py  config.py  domain_packs.py  environment.py  explanations.py  pipeline.py  reporting.py  schemas.py  tribe_service.py
tests/: test_api.py  test_pipeline.py  test_schemas.py  test_tribe_service.py
web/src/: App.tsx  styles.css  types.ts
