[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "communication-lab"
version = "0.1.0"
description = "Local API/backend for single-item TRIBE v2 inference with optional natural-language explanations."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "huggingface_hub>=0.30,<1",
  "jinja2>=3.1,<4",
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "plotly>=6.0,<7",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
runtime = [
  "matplotlib>=3.9,<4",
  "mne>=1.8,<2",
  "nilearn>=0.11,<1",
  "openai>=1.0,<2",
  "soundfile>=0.13,<1",
  "tribev2 @ git+https://github.com/facebookresearch/tribev2",
]
test = [
  "pytest>=8.3,<9",
]

[project.scripts]
communication-lab-check = "communication_lab.cli:main"
communication-lab-api = "communication_lab.api:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
